--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+English:400,400i|Roboto:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/51f81a2ff5.js"></script>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <title>Boat Ride Adventure</title>
     
 </head>
