--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
+    <!-- stylesheet linked here -->
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+English:400,400i|Roboto:400,700&display=swap" rel="stylesheet">
+    <!-- google fonts linked here -->
     <script src="https://kit.fontawesome.com/51f81a2ff5.js"></script>
+    <!-- font awesome kit linked here -->
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-    <title>Boat Ride Adventures</title>
+    <!-- favicon linked here -->
+
+    <title>Get in touch</title>
 
 </head>
 <body>
+    <!-- header markups start here -->
     <header class="mainHeader contact">
             <div class="wrapper">
                 <nav>
@@ -30,6 +36,7 @@
 
     <main class="contactAreaFull wrapper">
 
+        <!-- social media menu and address information markups start here -->
         <div class="contactBlock">
             <div class="socialMenu">
                 <ul class="socialNav">
@@ -75,6 +82,7 @@
         </div>
 
 
+        <!-- contact form starts here -->
         <div class="contactForm">
             <form action="#">
                 <fieldset class="contactFS">
@@ -95,6 +103,8 @@
         </div>
 
     </main>
+
+    <!-- footer markups start here -->
     <footer>
         <div class="wrapper">
             <p>copyright &copy; 2019 HackerYou</p>
